--- a/src/output.css
+++ b/src/output.css
@@ -566,6 +566,14 @@ video {
   bottom: 0px;
 }
 
+.left-0 {
+  left: 0px;
+}
+
+.right-0 {
+  right: 0px;
+}
+
 .col-span-full {
   grid-column: 1 / -1;
 }
@@ -619,11 +627,6 @@ video {
   display: none;
 }
 
-.size-10 {
-  width: 2.5rem;
-  height: 2.5rem;
-}
-
 .h-1 {
   height: 0.25rem;
 }
@@ -638,6 +641,10 @@ video {
 
 .h-32 {
   height: 8rem;
+}
+
+.h-4 {
+  height: 1rem;
 }
 
 .h-40 {
@@ -660,14 +667,6 @@ video {
   height: 100svh;
 }
 
-.h-2 {
-  height: 0.5rem;
-}
-
-.h-4 {
-  height: 1rem;
-}
-
 .min-h-\[100px\] {
   min-height: 100px;
 }
@@ -688,6 +687,10 @@ video {
   width: 16.666667%;
 }
 
+.w-10\/12 {
+  width: 83.333333%;
+}
+
 .w-32 {
   width: 8rem;
 }
@@ -696,12 +699,16 @@ video {
   width: 10rem;
 }
 
+.w-6 {
+  width: 1.5rem;
+}
+
 .w-96 {
   width: 24rem;
 }
 
-.w-\[1080px\] {
-  width: 1080px;
+.w-\[1000px\] {
+  width: 1000px;
 }
 
 .w-full {
@@ -712,24 +719,37 @@ video {
   width: 100vw;
 }
 
-.w-\[1050px\] {
-  width: 1050px;
+.w-\[220\%\] {
+  width: 220%;
 }
 
-.w-\[1000px\] {
-  width: 1000px;
+.w-\[120\%\] {
+  width: 120%;
 }
 
-.w-\[800px\] {
-  width: 800px;
+.w-\[100\%\] {
+  width: 100%;
 }
 
-.w-\[900px\] {
-  width: 900px;
+.max-w-\[1080px\] {
+  max-width: 1080px;
+}
+
+.max-w-\[680px\] {
+  max-width: 680px;
 }
 
 .max-w-sm {
   max-width: 24rem;
+}
+
+.grow {
+  flex-grow: 1;
+}
+
+.scale-x-100 {
+  --tw-scale-x: 1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 @keyframes spin {
@@ -758,6 +778,10 @@ video {
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
+.flex-row {
+  flex-direction: row;
+}
+
 .items-center {
   align-items: center;
 }
@@ -776,6 +800,16 @@ video {
 
 .gap-4 {
   gap: 1rem;
+}
+
+.space-y-7 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1.75rem * var(--tw-space-y-reverse));
+}
+
+.overflow-hidden {
+  overflow: hidden;
 }
 
 .rounded-full {
@@ -852,6 +886,11 @@ video {
   background-color: rgb(17 24 39 / var(--tw-bg-opacity, 1));
 }
 
+.bg-greenLight {
+  --tw-bg-opacity: 1;
+  background-color: rgb(97 206 166 / var(--tw-bg-opacity, 1));
+}
+
 .bg-lightBlue {
   --tw-bg-opacity: 1;
   background-color: rgb(43 132 234 / var(--tw-bg-opacity, 1));
@@ -911,9 +950,9 @@ video {
      object-fit: contain;
 }
 
-.object-cover {
-  -o-object-fit: cover;
-     object-fit: cover;
+.object-fill {
+  -o-object-fit: fill;
+     object-fit: fill;
 }
 
 .p-1 {
@@ -928,29 +967,24 @@ video {
   padding: 24px;
 }
 
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
 }
 
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
+.px-\[18px\] {
+  padding-left: 18px;
+  padding-right: 18px;
 }
 
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-}
-
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
 }
 
 .py-5 {
@@ -963,40 +997,9 @@ video {
   padding-bottom: 1.75rem;
 }
 
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
-
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
-.py-0 {
-  padding-top: 0px;
-  padding-bottom: 0px;
-}
-
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
-.pr-5 {
-  padding-right: 1.25rem;
-}
-
-.pr-3 {
-  padding-right: 0.75rem;
-}
-
-.pr-2 {
-  padding-right: 0.5rem;
-}
-
-.pr-1 {
-  padding-right: 0.25rem;
+.py-\[14px\] {
+  padding-top: 14px;
+  padding-bottom: 14px;
 }
 
 .pr-0 {
@@ -1014,6 +1017,14 @@ video {
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-\[18px\] {
+  font-size: 18px;
+}
+
+.text-\[40px\] {
+  font-size: 40px;
 }
 
 .text-lg {
@@ -1034,6 +1045,14 @@ video {
   font-weight: 500;
 }
 
+.leading-7 {
+  line-height: 1.75rem;
+}
+
+.leading-\[1\.2\] {
+  line-height: 1.2;
+}
+
 .text-gray-300 {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity, 1));
@@ -1051,6 +1070,10 @@ video {
 
 .underline {
   text-decoration-line: underline;
+}
+
+.opacity-70 {
+  opacity: 0.7;
 }
 
 .shadow {
@@ -1101,6 +1124,10 @@ video {
 .hover\:bg-blue-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(29 78 216 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:bg-lightBlue500:hover {
+  background-color: #Ob72e7;
 }
 
 .hover\:from-pink-500:hover {
